<resources>
    <string name="app_name">Agenda Pet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_agendamento">Agendamento</string>
    <string name="menu_historico">Histórico</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>

    //strings tela - Cadastro Usuario
    <string name="nome_usuario">Nome</string>
    <string name="email_usuario">E-mail</string>
    <string name="senha_usuario">Senha</string>
    <string name="btn_cadastrar_usuario">Cadastrar</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="telefone">Telefone</string>
    <string name="nome">Nome</string>
    <string name="alterar">Alterar</string>
    <string name="agendar">Agendar</string>
    <string name="limpar">Limpar</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="agendamento">Agendamento</string>
</resources>
