<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_agendamento"
            android:icon="@mipmap/ic_launcher_add_box"
            android:title="@string/menu_agendamento" />
        <item
            android:id="@+id/nav_historico"
            android:icon="@mipmap/ic_launcher_historico"
            android:title="@string/menu_historico" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@mipmap/ic_launcher_person"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@mipmap/ic_launcher_info"
            android:title="@string/menu_sobre" />
    </group>

        <item
            android:id="@+id/nav_sair"
            android:icon="@mipmap/ic_launcher_logout"
            android:title="@string/menu_sair" />


</menu>
