<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.CadastroUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="178dp"
            android:layout_marginBottom="16dp"
            android:src="@mipmap/ic_launcher_add_person" />

        <EditText
            android:id="@+id/per_usu_txt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/nome"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/per_usu_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/per_usu_txt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/senha"
            android:layout_margin="8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/per_btn_cadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alterar"
                android:background="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                style = "@style/TextAppearance.AppCompat.Widget.Button.Colored"/>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>