<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activitys.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="178dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/pet_banho" />

        <TextView
            android:id="@+id/age_txt_nome_empresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:hint="Empresa: PetShop Brasil"
            android:layout_margin="8dp"/>
        <TextView
            android:id="@+id/age_txt_custo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:hint="Custo do Serviço: R$35,00"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/age_txt_nome_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:inputType="text"
            android:hint="@string/nome"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/age_txt_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:inputType="text"
            android:hint="@string/telefone"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/age_nome_pet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:inputType="text"
            android:hint="Nome do Pet"
            android:layout_margin="8dp"/>
        <EditText
            android:id="@+id/age_raca_pet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:inputType="text"
            android:hint="Raça"
            android:layout_margin="8dp"/>
        <Spinner
            android:id="@+id/age_porte_pet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:inputType="text"
            android:hint="Porte"
            android:layout_margin="8dp">
        </Spinner>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/age_btn_solicitar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/agendar"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@color/colorPrimary"
                style = "@style/TextAppearance.AppCompat.Widget.Button.Colored"/>

            <Button
                android:id="@+id/age_btn_limpar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@id/age_btn_solicitar"
                android:layout_toLeftOf="@id/age_btn_solicitar"
                android:background="@color/cardview_light_background"
                android:textColor="@color/colorPrimary"
                android:text="@string/limpar"/>
        </RelativeLayout>


    </LinearLayout>

</ScrollView>